--- a/src/main/resources/archetype-resources/src/main/webapp/WEB-INF/templates/template-top.xhtml
+++ b/src/main/resources/archetype-resources/src/main/webapp/WEB-INF/templates/template-top.xhtml
@@ -48,8 +48,8 @@
 
     <ui:define name="footer">
         <a target="_blank"
-           href="https://github.com/adminfaces/${artifactId}-persistence">
-            Copyright (C) 2017-2018 - AdminFaces Starter Project
+           href="https://github.com/adminfaces/admin-starter-persistence">
+            Copyright (C) 2017-2018 - AdminFaces Starter Persistence Project
         </a>
 
         <div class="pull-right hidden-xs" style="color: gray">
