--- a/src/main/resources/archetype-resources/src/main/webapp/WEB-INF/templates/template-top.xhtml
+++ b/src/main/resources/archetype-resources/src/main/webapp/WEB-INF/templates/template-top.xhtml
@@ -47,9 +47,9 @@
 
 
     <ui:define name="footer">
-        <a target="_blank"
-           href="https://github.com/adminfaces/admin-starter-persistence">
-            Copyright (C) 2017-2018 - AdminFaces Starter Persistence Project
+          <a target="_blank"
+           href="https://adminfaces.github.io/site/">
+            AdminFaces - © 2017-2018
         </a>
 
         <div class="pull-right hidden-xs" style="color: gray">
