--- a/src/main/resources/archetype-resources/src/main/webapp/WEB-INF/templates/template.xhtml
+++ b/src/main/resources/archetype-resources/src/main/webapp/WEB-INF/templates/template.xhtml
@@ -48,14 +48,11 @@
    <ui:define name="controlsidebar-content">
         <ui:include src="/includes/controlsidebar-tabs-content.xhtml"/>
     </ui:define>
-    
-    
-
 
    <ui:define name="footer">
           <a target="_blank"
-           href="https://github.com/adminfaces/admin-starter-persistence">
-            Copyright (C) 2017-2018 - AdminFaces Starter Persistence Project
+           href="https://adminfaces.github.io/site/">
+            AdminFaces - © 2017-2018
         </a>
 
         <div class="pull-right hidden-xs" style="color: gray">
