--- a/src/main/resources/archetype-resources/src/main/webapp/includes/top-bar.xhtml
+++ b/src/main/resources/archetype-resources/src/main/webapp/includes/top-bar.xhtml
@@ -20,7 +20,7 @@
     <ul class="nav navbar-nav">
         <li>
             <h:form prependId="false">
-                 <p:menuButton value="Layout" style="margin:10px 10px 0 0 " id="layout-menu">
+                 <p:menuButton value="Layout" style="margin:10px 10px 0 0 " id="layout-menu" styleClass="hidden-sm hidden-xs">
                     <p:menuitem value="Left menu (default)" disabled="${symbol_pound}{layoutMB.leftMenuTemplate}" onclick="toggleTemplate();return false" ajax="false" icon="fa fa-list-ul"/>
                     <p:menuitem value="Top menu" disabled="${symbol_pound}{not layoutMB.leftMenuTemplate}" onclick="toggleTemplate();return false" ajax="false" icon="fa fa-credit-card"/>
                 </p:menuButton>
